reorginize the files

--- a/refactor2/index.html
+++ b/refactor2/index.html
@@ -92,7 +92,10 @@
     </section>
     <section id="content_fc">
         <div class="full-size">
-            
+            <div class="fc-grid-item">Row 1 Content</div>
+            <div class="fc-grid-item">Row 2 Content</div>
+            <div class="fc-grid-item">Row 3 Content</div>
+            <div class="fc-grid-item">Row 4 Content</div>
         </div>
     </section>
     <section id="content_ba">
