--- a/refactor2/index.html
+++ b/refactor2/index.html
@@ -12,6 +12,7 @@
 
 
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/butterfly-icon" href="images/favicon_bfly.png">
 </head>
 <body>
     <header>
