--- a/refactor2/index.html
+++ b/refactor2/index.html
@@ -93,15 +93,26 @@
     </section>
     <section id="content_fc">
         <div class="full-size">
-            <div class="fc-grid-item">Row 1 Content</div>
-            <div class="fc-grid-item">Row 2 Content</div>
-            <div class="fc-grid-item">Row 3 Content</div>
-            <div class="fc-grid-item">Row 4 Content</div>
+            <div class="fc-grid-head"> <p class="fc-head-text">LEARN SOME FACTS</p></div>
+
+            <div class="fc-grid-item"> <p class="fact-text">There are about 20,000 species of butterflies worldwide, each with unique patterns, sizes, and colors. From the small Western Pygmy Blue to the large Queen Alexandra's Birdwing, their diversity is astounding.</p></div>
+            <div class="fc-grid-item"><p class="fact-text">Butterflies have taste sensors on their feet, which they use to identify whether a plant is suitable for laying their eggs. When a butterfly lands on a leaf, it can taste the plant’s sap to determine if it's the right food source for its larvae.</p></div>
+            <div class="fc-grid-item"><p class="fact-text">Butterflies are cold-blooded and need to regulate their body temperature by basking in the sun. They often sit with their wings spread out to absorb heat from the sun's rays, which helps them stay active.</p></div>
+            <div class="fc-grid-item"><p class="fact-text">Butterflies have compound eyes that are made up of thousands of tiny lenses. These eyes can detect a vast range of colors and are especially adept at seeing ultraviolet light, which is invisible to humans. This helps them find flowers and potential mates.</p></div>
         </div>
     </section>
     <section id="content_ba">
         <div class="full-size">
-            <h1>Content BA</h1>
+            <div class="ba-grid-item">
+                <img src="images/x-ray_butterfly.gif" alt="" class="x-ray-img">
+                <img src="images/x-ray_counter_butter.png" alt="" class="color-img">
+                
+            </div>
+            <div class="ba-grid-item">
+                <div class="ba-tile-desc">
+                    <input type="range" min="0" max="100" value="50" class="slider" id="imageSlider">
+                </div>
+            </div>
         </div>
     </section>
     <section id="content_ea">
